// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glyph snapshots — 30/30 moon-phase: firstQuarter 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
    <Path
      d="M12 4A8 8 0 0 1 12 20Z"
      fill="currentColor"
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: full 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      fill="currentColor"
      r={8}
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: lastQuarter 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
    <Path
      d="M12 4A8 8 0 0 0 12 20Z"
      fill="currentColor"
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: new 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: waningCrescent 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
    <Path
      d="M12 4A8 8 0 0 0 12 20A4.6 8 0 0 1 12 4Z"
      fill="currentColor"
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: waningGibbous 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
    <Path
      d="M12 4A8 8 0 0 0 12 20A4.6 8 0 0 0 12 4Z"
      fill="currentColor"
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: waxingCrescent 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
    <Path
      d="M12 4A8 8 0 0 1 12 20A4.6 8 0 0 0 12 4Z"
      fill="currentColor"
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 moon-phase: waxingGibbous 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#2E2926"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={8}
    />
    <Path
      d="M12 4A8 8 0 0 1 12 20A4.6 8 0 0 1 12 4Z"
      fill="currentColor"
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: jupiter 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#4D6F9D"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M14.7 4.1c-4.9 1.8-8.5 5.8-9.9 11"
    />
    <Path
      d="M4.6 15.1h13"
    />
    <Path
      d="M14.7 4.1v16"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: mars 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#A64F3D"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={10.2}
      cy={13.8}
      r={4.9}
    />
    <Path
      d="m13.7 10.3 5.3-5.3"
    />
    <Path
      d="M14.3 4.8h4.9v4.9"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: mercury 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#6F777D"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M8.6 3.4a3.4 3.4 0 0 0 6.8 0"
    />
    <Circle
      cx={12}
      cy={10.4}
      r={3.9}
    />
    <Path
      d="M12 14.3v6"
    />
    <Path
      d="M9.2 17.3h5.6"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: moon 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#93A9B8"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M14.6 4.4a8.1 8.1 0 1 0 0 15.2A6.3 6.3 0 0 1 14.6 4.4Z"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: neptune 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#3F6E9D"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M6.6 5.1v3.1a5.4 5.4 0 0 0 10.8 0V5.1"
    />
    <Path
      d="M12 4v15.9"
    />
    <Path
      d="M8.9 16.7h6.2"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: pluto 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#60435E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={5.9}
      r={2.2}
    />
    <Path
      d="M7.3 6.6a4.7 4.7 0 0 0 9.4 0"
    />
    <Path
      d="M12 11.3v7.2"
    />
    <Path
      d="M9.2 15.5h5.6"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: saturn 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#6C6256"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M8.3 3.9v14.6"
    />
    <Path
      d="M5.5 6.9h5.6"
    />
    <Path
      d="M8.3 12.1c1.2-1.9 3-2.8 4.7-2.2 2.1.8 2.8 3.2 1.6 5.6-.6 1.3-1.5 2.4-1.9 3.4-.3.9 0 1.7.8 2.1"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: sun 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#D5A13C"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={12}
      r={7.25}
    />
    <Circle
      cx={12}
      cy={12}
      fill="currentColor"
      r={1.3}
      stroke="none"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: uranus 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5B9EB5"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M7.4 3.9v7.6"
    />
    <Path
      d="M16.6 3.9v7.6"
    />
    <Path
      d="M7.4 7.7h9.2"
    />
    <Path
      d="M12 7.7v7.2"
    />
    <Circle
      cx={12}
      cy={17.3}
      r={2.5}
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 planet: venus 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#B7747E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={8.4}
      r={4.6}
    />
    <Path
      d="M12 13v7.2"
    />
    <Path
      d="M8.8 16.6h6.4"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: aquarius 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="m4.2 9.7 3.9-3.5 3.9 3.5 3.9-3.5 3.9 3.5"
    />
    <Path
      d="m4.2 16.9 3.9-3.5 3.9 3.5 3.9-3.5 3.9 3.5"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: aries 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M12 20.3V10.9c0-3.6-1.2-6.9-3.9-7.3-1.8-.3-3.5 1.2-3.2 3.6"
    />
    <Path
      d="M12 10.9c0-3.6 1.2-6.9 3.9-7.3 1.8-.3 3.5 1.2 3.2 3.6"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: cancer 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={7.4}
      cy={9.1}
      r={2.7}
    />
    <Circle
      cx={16.6}
      cy={14.9}
      r={2.7}
    />
    <Path
      d="M7.4 6.4c4.5-2.6 9.3-2.2 12.3 1.1"
    />
    <Path
      d="M16.6 17.6c-4.5 2.6-9.3 2.2-12.3-1.1"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: capricorn 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M4.5 15.3V8.2c0-1.8 1-3 2.5-3s2.6 1.2 2.6 3v7.1"
    />
    <Path
      d="M9.6 15.3V8.2c0-1.8 1.1-3 2.6-3s2.6 1.2 2.6 3v4.1c0 1.1.1 1.7.4 2.2"
    />
    <Circle
      cx={17}
      cy={16.4}
      r={2.7}
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: gemini 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M4.5 4.3c4.7 2.8 10.3 2.8 15 0"
    />
    <Path
      d="M4.5 19.7c4.7-2.8 10.3-2.8 15 0"
    />
    <Path
      d="M9 6.3v11.4"
    />
    <Path
      d="M15 6.3v11.4"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: leo 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={7.5}
      cy={13.6}
      r={2.6}
    />
    <Path
      d="M7.5 11c.3-4.3 2.4-6.6 5.1-6.6 2.8 0 4.6 2.1 4.6 4.7 0 2.8-2.2 4.8-2.2 7.4 0 1.7 1.1 2.8 2.7 2.8"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: libra 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M4.4 19.2h15.2"
    />
    <Path
      d="M4.4 14.7h4.3a3.4 3.4 0 1 1 6.6 0h4.3"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: pisces 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M8.7 3.9a11.2 11.2 0 0 0 0 16.2"
    />
    <Path
      d="M15.3 3.9a11.2 11.2 0 0 1 0 16.2"
    />
    <Path
      d="M6.4 12h11.2"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: sagittarius 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M5 19 19 5"
    />
    <Path
      d="M12.4 5H19v6.6"
    />
    <Path
      d="m7 12.2 4.8 4.8"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: scorpio 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M4.4 19V7.4c0-1.8 1.1-3 2.6-3s2.7 1.3 2.7 3.1V19"
    />
    <Path
      d="M9.7 7.5c0-1.8 1.1-3.1 2.6-3.1s2.7 1.3 2.7 3.1V19"
    />
    <Path
      d="M15 7.5c0-1.8 1.1-3.1 2.6-3.1s2.7 1.3 2.7 3.1v8.1c0 2.2 1 3.4 2.9 3.5"
    />
    <Path
      d="m18.6 16.8 2 2.3-2.8.8"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: taurus 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Circle
      cx={12}
      cy={14.9}
      r={5.2}
    />
    <Path
      d="M5.7 3.7a6.3 6.3 0 0 0 12.6 0"
    />
  </G>
</Svg>
`;

exports[`glyph snapshots — 30/30 zodiac: virgo 1`] = `
<Svg
  accessibilityElementsHidden={true}
  accessible={false}
  color="#5F665E"
  fill="none"
  height={24}
  importantForAccessibility="no-hide-descendants"
  viewBox="0 0 24 24"
  width={24}
>
  <G
    fill="none"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1.5}
  >
    <Path
      d="M4.4 19.4V7.7c0-1.9 1.1-3.1 2.6-3.1s2.7 1.3 2.7 3.2v11.6"
    />
    <Path
      d="M9.7 7.8c0-1.9 1.1-3.2 2.6-3.2s2.7 1.3 2.7 3.2v11.6"
    />
    <Path
      d="M15 7.8c0-1.9 1.1-3.2 2.6-3.2s2.7 1.3 2.7 3.2v5.6c0 4.6-2.5 7.4-6.6 8.4"
    />
  </G>
</Svg>
`;
